# recipebox-1

./: README.md  pyproject.toml
recipebox/: settings.py  urls.py
recipes/: admin.py  forms.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
recipes/static/css/: recipes.css
recipes/templates/: index.html
recipes/templates/recipes/: add_form.html  author_detail.html  base.html  index.html  menubar.html  recipe_detail.html  source_detail.html
