[tool.poetry]
name = "recipebox"
version = "0.1.0"
description = "A basic Django app to store and share your recipes"
authors = ["Janell.Huyck <Janell.Huyck@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
